--- a/styles/main.css
+++ b/styles/main.css
@@ -39,7 +39,6 @@
   padding: 40px 0;
 }
 .header__burger {
-  margin-left: 24px;
   cursor: pointer;
   transition: all ease-out 0.2s;
 }
@@ -1068,13 +1067,13 @@ input[name="teachers__slider__r"] {
     position: relative;
   }
   .menu-mobile {
-    position: absolute;
+    position: fixed;
     margin-top: 64px;
     padding: 0 16px 32px;
     width: 100%;
     height: auto;
     background-color: white;
-    z-index: 1;
+    z-index: 11;
     flex-direction: column;
     justify-content: center;
     display: flex;
@@ -1108,13 +1107,14 @@ input[name="teachers__slider__r"] {
   .mobile__hidden {
     position: absolute;
     visibility: hidden;
+    display: none;
   }
   .header {
     display: block;
     padding: 0;
     height: auto;
-    margin: 0 16px;
-    z-index: 2;
+    padding: 0 16px;
+    z-index: 10;
   }
   .header__menu {
     padding: 16px 0;
@@ -1452,6 +1452,7 @@ input[name="teachers__slider__r"] {
     background: none;
     margin: 0 16px;
     padding: 0;
+    width: auto;
   }
   .map__info {
     width: 100%;
