--- a/styles/main.less
+++ b/styles/main.less
@@ -50,9 +50,15 @@
   }
 
   &__burger {
-    margin-left: 24px;
+    //margin-left: 24px;
     cursor: pointer;
     transition: all ease-out 0.2s;
+    //width: 34px;
+    //height: 34px;
+    ////display: flex;
+    ////justify-content: center;
+    ////align-items: center;
+    //background-image: url("../images/mobile/btn-menu.svg");
   }
 
   &__menu {
@@ -1308,14 +1314,14 @@ input[name="teachers__slider__r"] {
   }
 
   .menu-mobile {
-    position: absolute;
+    position: fixed;
     margin-top: 64px;
     padding: 0 16px 32px;
     //display: none;
     width: 100%;
     height: auto;
     background-color: white;
-    z-index: 1;
+    z-index: 11;
     flex-direction: column;
     justify-content: center;
 
@@ -1360,15 +1366,15 @@ input[name="teachers__slider__r"] {
   .mobile__hidden {
     position: absolute;
     visibility: hidden;
-    //display: none;
+    display: none;
   }
 
   .header {
     display: block;
     padding: 0;
     height: auto;
-    margin: 0 16px;
-    z-index: 2;
+    padding: 0 16px;
+    z-index: 10;
 
     &__menu {
       padding: 16px 0;
@@ -1794,6 +1800,7 @@ input[name="teachers__slider__r"] {
     background: none;
     margin: 0 16px;
     padding: 0;
+    width: auto;
 
     &__info {
       width: 100%;
