--- a/styles/main.less
+++ b/styles/main.less
@@ -1157,10 +1157,12 @@ input[name="teachers__slider__r"] {
   width: 248px;
   min-width: 248px;
   margin: 0 12px;
+
   &_white {
     background: white;
     border: 1.75px solid #F4F4F4;
   }
+
   &__points {
     font-weight: 700;
     font-size: 30px;
@@ -1173,11 +1175,17 @@ input[name="teachers__slider__r"] {
     padding: 8px 0 32px;
   }
 
+  &__link {
+    display: flex;
+    text-decoration: none;
+  }
+
   &__name {
     margin-left: 16px;
     max-width: 84px;
     font-size: 18px;
     line-height: 22px;
+    color: #2B2D33;
   }
 }
 
@@ -1299,6 +1307,79 @@ input[name="teachers__slider__r"] {
 
 #student__radio:checked ~ label div {
   background: #326EEA;
+}
+
+.photos {
+  position: relative;
+  top: @price-offset+@license-offset;
+  margin: 0 84px 120px;
+  display: flex;
+
+  &__middle {
+    margin: 0 24px 0 76px;
+  }
+  &__alert {
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 160px;
+    height: 160px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    transform: rotate(-30deg);
+    background-image: url("../images/photos/alert.svg");
+    color: white;
+  }
+}
+
+.emojis {
+  display: flex;
+  margin: 0 16px 24px;
+}
+
+.emoji:nth-child(n+2) {
+  margin-left: 16px;
+}
+
+.photo__bg {
+  //position: absolute;
+  //top: 196px;
+  margin-top: 196px;
+  width: 300px;
+  height: 292px;
+  background: #326EEA;
+  border-radius: 26px;
+  display: flex;
+  align-items: end;
+  z-index: 0;
+}
+
+#photo-1 {
+  position: absolute;
+  top: 0;
+  //display: block;
+  margin-left: 52px;
+  z-index: 3;
+}
+#photo-3 {
+  position: absolute;
+  left: 200px;
+  top: 470px;
+}
+#photo-logo {
+  margin-top: 80px;
+  display: flex;
+  justify-content: end;
+  & img {
+    width: 348.44px;
+    height: 64px;
+  }
+}
+#photo-5 {
+  margin: 24px 0 0 52px;
 }
 
 .footer {
