--- a/styles/main.less
+++ b/styles/main.less
@@ -1157,7 +1157,9 @@ input[name="teachers__slider__r"] {
   width: 248px;
   min-width: 248px;
   margin: 0 12px;
-
+  &_1 {
+    margin-left: -284px;
+  }
   &_white {
     background: white;
     border: 1.75px solid #F4F4F4;
@@ -1318,6 +1320,7 @@ input[name="teachers__slider__r"] {
   &__middle {
     margin: 0 24px 0 76px;
   }
+
   &__alert {
     margin-top: 30px;
     display: flex;
@@ -1364,20 +1367,26 @@ input[name="teachers__slider__r"] {
   margin-left: 52px;
   z-index: 3;
 }
+
 #photo-3 {
   position: absolute;
   left: 200px;
   top: 470px;
 }
+
 #photo-logo {
-  margin-top: 80px;
+  position: absolute;
+  top: 572px;
+  left: 562px;
   display: flex;
   justify-content: end;
+
   & img {
     width: 348.44px;
     height: 64px;
   }
 }
+
 #photo-5 {
   margin: 24px 0 0 52px;
 }
@@ -1911,7 +1920,9 @@ input[name="teachers__slider__r"] {
     margin-bottom: 32px;
     width: 100%;
   }
-
+  .comment__alert {
+    top: 0;
+  }
   .results {
     margin: 0 16px;
 
@@ -1936,7 +1947,15 @@ input[name="teachers__slider__r"] {
       text-align: left;
     }
   }
-
+  .examples {
+    margin: 0 16px;
+    //&__slider {
+    //  width: 100%;
+    //}
+  }
+  .example_1 {
+      margin-left: 170px;
+  }
   .map {
     background: none;
     margin: 0 16px;
@@ -2008,6 +2027,82 @@ input[name="teachers__slider__r"] {
       margin: 0;
       padding-bottom: 64px;
       text-align: left;
+    }
+  }
+
+  .photos {
+    max-width: 100%;
+    margin: 0 16px 40px;
+    flex-wrap: wrap;
+
+    &__middle {
+      order: 0;
+      max-width: 100%;
+      margin: 0;
+    }
+
+    &__left {
+      order: 1;
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+    }
+
+    &__right {
+      margin-top: 32px;
+      order: 3;
+      width: 100%;
+      & img {
+        width: 100%;
+      }
+    }
+    &__alert {
+      order: 2;
+    }
+  }
+
+  .photo__bg {
+    order: 1;
+    width: 100%;
+    height: 292px;
+    margin-top: 250px;
+
+    & img {
+      width: 296px;
+      height: auto;
+    }
+  }
+
+  #photo-1 {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    position: absolute;
+    top: 380px;
+    order: 0;
+  }
+
+  #photo-3 {
+    width: 174px;
+    position: relative;
+    top: 0;
+    left: 0;
+    order: 0;
+  }
+
+  #photo-middle {
+    width: 100%;
+    height: auto;
+  }
+
+  #photo-logo {
+    position: relative;
+    order: 4;
+    margin-top: 64px;
+    top: 0;
+    left: 0;
+    & img {
+      width: 296px;
     }
   }
 
