--- a/styles/main.less
+++ b/styles/main.less
@@ -1911,14 +1911,15 @@ input[name="teachers__slider__r"] {
     }
 
     &__slides {
-      width: 900%;
+      //width: 900%;
     }
 
     &__slide {
       display: flex;
-      flex-wrap: wrap;
+      margin-right: 32px;
+      //flex-wrap: wrap;
       overflow: hidden;
-      width: 10%;
+      //width: 10%;
       transition: all 0.5s ease;
     }
   }
