--- a/styles/main.less
+++ b/styles/main.less
@@ -1907,11 +1907,14 @@ input[name="teachers__slider__r"] {
 
     &__slider {
       //max-width: 302px;
-      margin-right: 302px + 32px;
+      //margin-right: 302px + 32px;
+      max-width: 334px;
     }
 
     &__slides {
-      //width: 900%;
+      width: 1000%;
+      overflow: hidden;
+      //max-width: 334px;
     }
 
     &__slide {
@@ -1919,13 +1922,18 @@ input[name="teachers__slider__r"] {
       margin-right: 32px;
       //flex-wrap: wrap;
       overflow: hidden;
-      //width: 10%;
+      width: 302px;
       transition: all 0.5s ease;
     }
   }
 
   .teacher {
     margin-bottom: 32px;
+
+    &:nth-child(odd) {
+      margin-right: 0;
+    }
+
     width: 100%;
   }
 
@@ -1938,13 +1946,16 @@ input[name="teachers__slider__r"] {
       margin-top: 40px;
       max-width: none;
     }
+
     &__body {
       margin: 0;
       max-width: none;
     }
+
     &__alert {
       top: 0;
     }
+
     &__poster {
       //margin-bottom: 40px;
     }
