--- a/styles/main.css
+++ b/styles/main.css
@@ -774,6 +774,13 @@ input[name="teachers__slider__r"] {
   background-image: url("../images/slider/arrow-left-disabled.svg");
   cursor: pointer;
 }
+.slider__button__wrapper {
+  display: flex;
+  position: absolute;
+  z-index: 3;
+  top: 640px;
+  right: 84px;
+}
 .slider__button__left__examples {
   background-image: url("../images/slider/arrow-left.svg");
 }
@@ -1554,11 +1561,15 @@ input[name="teachers__slider__r"] {
     transition: all 0.5s ease;
   }
   .teacher {
-    margin-bottom: 32px;
+    margin-bottom: 0;
     width: 100%;
   }
   .teacher:nth-child(odd) {
     margin-right: 0;
+  }
+  .slider__button__wrapper {
+    position: unset;
+    justify-content: center;
   }
   .comment {
     width: 100%;
